# hts-tools

./: +q  .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  htstools.rst  index.md  installation.md  modules.rst  python.md  usage.md
htstools/: __init__.py  cli.py  io.py  normalize.py  plot.py  qc.py  summarize.py  tables.py  utils.py
test/: tests.py
test/data/biotek-row-xlsx/: layout.xlsx  plate-A.xlsx  plate-B.xlsx  plate-C.xlsx  plate-D.xlsx  plate-E.xlsx  plate-F.xlsx  plate-G.xlsx
test/scripts/: test-plate-tab.sh  test-row-xlsx.sh
